Update 'python' component image to: quay.io/cuipinghuo_org/rhtap-test:4c3379d1284d84d706557465ff24435f24024193@sha256:917c574cb99b645d6174d00499f995ebc5a1001197dc90c2545a5fff6af3221c

--- a/components/python/overlays/development/deployment-patch.yaml
+++ b/components/python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/cuipinghuo_org/rhtap-test:4c3379d1284d84d706557465ff24435f24024193@sha256:917c574cb99b645d6174d00499f995ebc5a1001197dc90c2545a5fff6af3221c
+          name: container-image
